--- a/FriedStudio/FriedStudio.csproj
+++ b/FriedStudio/FriedStudio.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{1D782AA8-4D05-4CBF-99ED-F65E0DAEFF82}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <RootNamespace>ScuffedScri</RootNamespace>
-    <AssemblyName>ScuffedScri</AssemblyName>
+    <AssemblyName>FriedStudio</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -112,6 +112,9 @@
     <Reference Include="FastColoredTextBox, Version=2.16.24.0, Culture=neutral, PublicKeyToken=fb8aa12b994ef61b, processorArchitecture=MSIL">
       <HintPath>..\packages\FCTB.2.16.24\lib\FastColoredTextBox.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.13.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Windows" />
@@ -127,6 +130,8 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ControlProps.cs" />
+    <Compile Include="FakeControlType.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -140,6 +145,7 @@
       <DependentUpon>FormControl.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
+    <Compile Include="Project.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ResizableControl.cs">
       <SubType>UserControl</SubType>
